IJRAH-22: Scheduled task now gets hub version via hub-common